[project]
name = "mxrepo"
description = "Helper script for working with multiple git repositories."
version = "1.0.0.dev0"
keywords = ["development", "deployment", "git"]
authors = [
  {name = "MX Stack Developers", email = "dev@bluedynamics.com" }
]
requires-python = ">=3.9"
license = { text = "BSD 2-Clause License" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["readme"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/mxstack/mxrepo"
"Bug Reports" = "https://github.com/mxstack/mxrepo/issues"
Source = "https://github.com/mxstack/mxrepo/tree/main"

[project.scripts]
mxrepo = "mxrepo.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGES.md", "LICENSE.md"], content-type = "text/markdown"}

[tool.isort]
profile = "black"
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = []
